<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/light_gray"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_a_secure_product"
                    android:textSize="14dp" />


                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/search_black_icon"
                    android:hint="@string/search_product"
                    android:padding="5dp"
                    android:textSize="14dp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/secure_product"
                android:textSize="14dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newProductRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />


            <LinearLayout
                android:id="@+id/searchedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/frequently_searched_product"
                    android:textSize="14dp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/gray" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_categories"
                android:textSize="14dp" />


            <TextView
                android:id="@+id/txt_heating"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_button"
                android:drawableRight="@drawable/down_arrow"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="@string/heating_and_hot_water_controls"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/heatingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/txt_wireless"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_button"
                android:drawableRight="@drawable/down_arrow"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="@string/wireless_controls"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wirelessRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="60dp"
                android:visibility="gone" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>