<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".baseClass.MainHomePage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>


   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="20dp"
               android:layout_marginBottom="10dp"
               android:text="@string/installation"
               android:textSize="14dp" />


           <TextView
               android:id="@+id/replaceProgram"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="20dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/rounded_corner_button"
               android:gravity="left|center"
               android:paddingLeft="20dp"
               android:text="@string/replace_a_programmer_or_time_switch"
               android:textAllCaps="false"
               android:textColor="@color/white" />

           <TextView
               android:id="@+id/installProduct"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="20dp"
               android:background="@drawable/rounded_corner_button"
               android:gravity="left|center"
               android:paddingLeft="20dp"
               android:text="Install a new product"
               android:textAllCaps="false"
               android:textColor="@color/white" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="40dp"
               android:layout_marginBottom="10dp"
               android:text="@string/setup_manage_system"
               android:textSize="14dp" />


           <TextView
               android:id="@+id/quick_pair"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="20dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/rounded_corner_button"
               android:gravity="left|center"
               android:paddingLeft="20dp"
               android:text="Quick pair"
               android:textAllCaps="false"
               android:textColor="@color/white" />

           <TextView
               android:id="@+id/add_remove_device"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="20dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/rounded_corner_button"
               android:gravity="left|center"
               android:paddingLeft="20dp"
               android:text="@string/Troubleshoot_or_add_remove_device"
               android:textAllCaps="false"
               android:textColor="@color/white" />


           <TextView
               android:id="@+id/product_guide"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="60dp"
               android:layout_marginRight="20dp"
               android:background="@drawable/rounded_corner_button"
               android:gravity="left|center"
               android:paddingLeft="20dp"
               android:text="@string/product_guide"
               android:textAllCaps="false"
               android:textColor="@color/white" />


       </LinearLayout>

   </androidx.core.widget.NestedScrollView>


</LinearLayout>