<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/installation"
                    android:textSize="14dp" />


                <TextView
                    android:id="@+id/replaceProgram"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="left|center"
                    android:paddingLeft="20dp"
                    android:text="@string/replace_a_programmer_or_time_switch"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/installProduct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="left|center"
                    android:paddingLeft="20dp"
                    android:text="Install a new product"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/setup_manage_system"
                    android:textSize="14dp" />


                <TextView
                    android:id="@+id/quick_pair"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="left|center"
                    android:paddingLeft="20dp"
                    android:text="Quick pair"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/add_remove_device"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="left|center"
                    android:paddingLeft="20dp"
                    android:text="@string/Troubleshoot_or_add_remove_device"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/product_guide"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_corner_button"
                    android:gravity="left|center"
                    android:paddingLeft="20dp"
                    android:text="@string/product_guide"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFFFFF"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:gravity="right|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/drawerIconClose"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/black_back_arrow" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3" />


            <TextView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:gravity="center|left"
                android:text="FAQ"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d3d3d3" />


            <TextView
                android:id="@+id/pastOrder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:gravity="center|left"
                android:text="Video"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d3d3d3" />


            <TextView
                android:id="@+id/shareApp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:gravity="center|left"
                android:text="Contact Us"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d3d3d3" />


        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>




